[gd_scene load_steps=9 format=2]

[ext_resource path="res://textures/troll_skateboard.png" type="Texture" id=1]
[ext_resource path="res://Scenes/menu.gd" type="Script" id=2]
[ext_resource path="res://textures/buttons/LEGO_logo.png" type="Texture" id=3]
[ext_resource path="res://textures/buttons/start_normal.png" type="Texture" id=4]
[ext_resource path="res://textures/buttons/start_pressed.png" type="Texture" id=5]
[ext_resource path="res://textures/buttons/exit_normal.png" type="Texture" id=6]
[ext_resource path="res://textures/buttons/exit_pressed.png" type="Texture" id=7]

[sub_resource type="Animation" id=1]

resource_name = "intro"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Logo:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 220, -400 ), Vector2( 220, 50 ) ]
}

[node name="Background" type="TextureRect" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1024.0
margin_bottom = 600.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 1 )
expand = true
stretch_mode = 2
script = ExtResource( 2 )
_sections_unfolded = [ "Anchor", "Rect" ]

[node name="Logo" type="TextureRect" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 220.0
margin_top = -400.0
margin_right = 786.0
margin_bottom = -25.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 3 )
stretch_mode = 0
_sections_unfolded = [ "Rect" ]

[node name="StartButton" type="TextureButton" parent="." index="1"]

anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -218.0
margin_top = -126.0
margin_right = -69.0
margin_bottom = -52.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
_sections_unfolded = [ "Margin" ]

[node name="ExitButton" type="TextureButton" parent="." index="2"]

anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -540.0
margin_top = 177.0
margin_right = -391.0
margin_bottom = 251.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
_sections_unfolded = [ "Margin", "Textures" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="3"]

root_node = NodePath("..")
autoplay = "intro"
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/intro = SubResource( 1 )
blend_times = [  ]
_sections_unfolded = [ "Playback Options" ]

[node name="Button" type="Button" parent="." index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 666.0
margin_top = 489.0
margin_right = 766.0
margin_bottom = 539.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "OPTIONS"
flat = false
align = 1
_sections_unfolded = [ "custom_fonts" ]

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]

[connection signal="pressed" from="ExitButton" to="." method="_on_ExitButton_pressed"]

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]


